--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>GWTP Samples - Polymer</title>
+    <title>GWT Theo - Example</title>
 
     <script type="text/javascript" language="javascript" src="gwttheoexample/gwttheoexample.nocache.js"></script>
 
